Alters ios and android bundles

--- a/auth/ios/albums.xcodeproj/xcshareddata/xcschemes/albums.xcscheme
+++ b/auth/ios/albums.xcodeproj/xcshareddata/xcschemes/albums.xcscheme
@@ -29,9 +29,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "auth.app"
-               BlueprintName = "auth"
-               ReferencedContainer = "container:auth.xcodeproj">
+               BuildableName = "albums.app"
+               BlueprintName = "albums"
+               ReferencedContainer = "container:albums.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -43,9 +43,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "authTests.xctest"
-               BlueprintName = "authTests"
-               ReferencedContainer = "container:auth.xcodeproj">
+               BuildableName = "albumsTests.xctest"
+               BlueprintName = "albumsTests"
+               ReferencedContainer = "container:albums.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -61,9 +61,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "authTests.xctest"
-               BlueprintName = "authTests"
-               ReferencedContainer = "container:auth.xcodeproj">
+               BuildableName = "albumsTests.xctest"
+               BlueprintName = "albumsTests"
+               ReferencedContainer = "container:albums.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -71,9 +71,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "auth.app"
-            BlueprintName = "auth"
-            ReferencedContainer = "container:auth.xcodeproj">
+            BuildableName = "albums.app"
+            BlueprintName = "albums"
+            ReferencedContainer = "container:albums.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -94,9 +94,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "auth.app"
-            BlueprintName = "auth"
-            ReferencedContainer = "container:auth.xcodeproj">
+            BuildableName = "albums.app"
+            BlueprintName = "albums"
+            ReferencedContainer = "container:albums.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -113,9 +113,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "auth.app"
-            BlueprintName = "auth"
-            ReferencedContainer = "container:auth.xcodeproj">
+            BuildableName = "albums.app"
+            BlueprintName = "albums"
+            ReferencedContainer = "container:albums.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
