--- a/auth/android/app/build.gradle
+++ b/auth/android/app/build.gradle
@@ -72,10 +72,6 @@ import com.android.build.OutputFile
  * ]
  */
 
-project.ext.react = [
-    entryFile: "index.android.js"
-]
-
 apply from: "../../node_modules/react-native/react.gradle"
 
 /**
@@ -98,7 +94,7 @@ android {
     buildToolsVersion "23.0.1"
 
     defaultConfig {
-        applicationId "com.auth"
+        applicationId "com.albums"
         minSdkVersion 16
         targetSdkVersion 22
         versionCode 1
