--- a/auth/package.json
+++ b/auth/package.json
@@ -7,6 +7,7 @@
 		"test": "jest"
 	},
 	"dependencies": {
+		"babel-preset-react-native": "2.1.0",
 		"firebase": "^4.6.2",
 		"react": "16.0.0",
 		"react-native": "0.50.3"
