--- a/auth/package.json
+++ b/auth/package.json
@@ -7,13 +7,13 @@
 		"test": "jest"
 	},
 	"dependencies": {
-		"babel-preset-react-native": "2.1.0",
 		"firebase": "^4.6.2",
 		"react": "16.0.0",
 		"react-native": "0.50.3"
 	},
 	"devDependencies": {
 		"babel-jest": "21.2.0",
+		"babel-preset-react-native": "^2.1.0",
 		"jest": "21.2.1",
 		"react-test-renderer": "16.0.0"
 	},
