--- a/manager/package.json
+++ b/manager/package.json
@@ -19,6 +19,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "auth0-js": "^9.4.2",
     "expo": "^23.0.4",
     "firebase": "^4.8.1",
     "react": "16.0.0",
