--- a/manager/package.json
+++ b/manager/package.json
@@ -22,6 +22,7 @@
     "auth0-js": "^9.4.2",
     "expo": "^23.0.4",
     "firebase": "^4.8.1",
+    "hoek": "^5.0.3",
     "react": "16.0.0",
     "react-native": "0.50.3",
     "react-redux": "^5.0.6",
