--- a/albums/package.json
+++ b/albums/package.json
@@ -8,6 +8,7 @@
 	},
 	"dependencies": {
 		"axios": "^0.16.2",
+		"fresh": "^0.5.2",
 		"hoek": "^5.0.3",
 		"react": "16.0.0-alpha.12",
 		"react-native": "0.47.0"
