--- a/tech_stack/package.json
+++ b/tech_stack/package.json
@@ -8,6 +8,7 @@
 	},
 	"dependencies": {
 		"lodash": "^4.17.11",
+		"negotiator": "^0.6.1",
 		"react": "16.0.0",
 		"react-native": "0.50.3",
 		"react-redux": "^5.0.6",
