--- a/tech_stack/package.json
+++ b/tech_stack/package.json
@@ -7,6 +7,7 @@
 		"test": "jest"
 	},
 	"dependencies": {
+		"fresh": "^0.5.2",
 		"lodash": "^4.17.11",
 		"negotiator": "^0.6.1",
 		"react": "16.0.0",
