--- a/manager/package.json
+++ b/manager/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "auth0-js": "^9.4.2",
+    "cryptiles": "^4.1.3",
     "expo": "^23.0.4",
     "firebase": "^4.8.1",
     "hoek": "^5.0.3",
