--- a/manager/package.json
+++ b/manager/package.json
@@ -27,6 +27,7 @@
     "react": "16.0.0",
     "react-native": "0.50.3",
     "react-redux": "^5.0.6",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "sshpk": "^1.15.2"
   }
 }
