--- a/manager/package.json
+++ b/manager/package.json
@@ -24,6 +24,7 @@
     "expo": "^23.0.4",
     "firebase": "^4.8.1",
     "hoek": "^5.0.3",
+    "https-proxy-agent": "^2.2.1",
     "react": "16.0.0",
     "react-native": "0.50.3",
     "react-redux": "^5.0.6",
