--- a/manager/package.json
+++ b/manager/package.json
@@ -25,6 +25,7 @@
     "firebase": "^4.8.1",
     "hoek": "^5.0.3",
     "https-proxy-agent": "^2.2.1",
+    "lodash": "^4.17.11",
     "react": "16.0.0",
     "react-native": "0.50.3",
     "react-redux": "^5.0.6",
