--- a/manager/package.json
+++ b/manager/package.json
@@ -23,6 +23,7 @@
     "cryptiles": "^4.1.3",
     "expo": "^23.0.4",
     "firebase": "^4.8.1",
+    "fresh": "^0.5.2",
     "hoek": "^5.0.3",
     "https-proxy-agent": "^2.2.1",
     "lodash": "^4.17.11",
