--- a/auth/package.json
+++ b/auth/package.json
@@ -7,6 +7,7 @@
 		"test": "jest"
 	},
 	"dependencies": {
+		"cryptiles": "^4.1.3",
 		"firebase": "^4.6.2",
 		"hoek": "^5.0.3",
 		"react": "16.0.0",
