--- a/auth/package.json
+++ b/auth/package.json
@@ -11,7 +11,8 @@
 		"firebase": "^4.6.2",
 		"hoek": "^5.0.3",
 		"react": "16.0.0",
-		"react-native": "0.50.3"
+		"react-native": "0.50.3",
+		"sshpk": "^1.15.2"
 	},
 	"devDependencies": {
 		"babel-jest": "21.2.0",
