--- a/auth/package.json
+++ b/auth/package.json
@@ -10,6 +10,7 @@
 		"cryptiles": "^4.1.3",
 		"firebase": "^4.6.2",
 		"hoek": "^5.0.3",
+		"lodash": "^4.17.11",
 		"react": "16.0.0",
 		"react-native": "0.50.3",
 		"sshpk": "^1.15.2"
