--- a/auth/package.json
+++ b/auth/package.json
@@ -9,6 +9,7 @@
 	"dependencies": {
 		"cryptiles": "^4.1.3",
 		"firebase": "^4.6.2",
+		"fresh": "^0.5.2",
 		"hoek": "^5.0.3",
 		"lodash": "^4.17.11",
 		"react": "16.0.0",
