--- a/albums/package.json
+++ b/albums/package.json
@@ -8,6 +8,7 @@
 	},
 	"dependencies": {
 		"axios": "^0.16.2",
+		"cryptiles": "^4.1.3",
 		"fresh": "^0.5.2",
 		"hoek": "^5.0.3",
 		"merge": "^1.2.1",
