--- a/albums/package.json
+++ b/albums/package.json
@@ -11,6 +11,7 @@
 		"cryptiles": "^4.1.3",
 		"fresh": "^0.5.2",
 		"hoek": "^5.0.3",
+		"lodash": "^4.17.11",
 		"merge": "^1.2.1",
 		"react": "16.0.0-alpha.12",
 		"react-native": "0.47.0",
