--- a/albums/package.json
+++ b/albums/package.json
@@ -13,6 +13,7 @@
 		"hoek": "^5.0.3",
 		"lodash": "^4.17.11",
 		"merge": "^1.2.1",
+		"method-override": "^3.0.0",
 		"react": "16.0.0-alpha.12",
 		"react-native": "0.47.0",
 		"sshpk": "^1.15.2"
