--- a/auth/package.json
+++ b/auth/package.json
@@ -12,9 +12,11 @@
 		"fresh": "^0.5.2",
 		"hoek": "^5.0.3",
 		"lodash": "^4.17.11",
+		"merge": "^1.2.1",
 		"react": "16.0.0",
 		"react-native": "0.50.3",
-		"sshpk": "^1.15.2"
+		"sshpk": "^1.15.2",
+		"sync-exec": "^0.6.2"
 	},
 	"devDependencies": {
 		"babel-jest": "21.2.0",
