--- a/albums/package.json
+++ b/albums/package.json
@@ -15,6 +15,7 @@
 		"merge": "^1.2.1",
 		"method-override": "^3.0.0",
 		"mime": "^2.4.0",
+		"randomatic": "^3.1.1",
 		"react": "16.0.0-alpha.12",
 		"react-native": "0.47.0",
 		"sshpk": "^1.15.2"
