--- a/manager/package.json
+++ b/manager/package.json
@@ -29,6 +29,7 @@
     "lodash": "^4.17.11",
     "merge": "^1.2.1",
     "negotiator": "^0.6.1",
+    "protobufjs": "^6.8.8",
     "randomatic": "^3.1.1",
     "react": "16.0.0",
     "react-native": "0.50.3",
