--- a/auth/package.json
+++ b/auth/package.json
@@ -17,8 +17,7 @@
 		"randomatic": "^3.1.1",
 		"react": "16.0.0",
 		"react-native": "0.50.3",
-		"sshpk": "^1.15.2",
-		"sync-exec": "^0.6.2"
+		"sshpk": "^1.15.2"
 	},
 	"devDependencies": {
 		"babel-jest": "21.2.0",
